@@ -1,13 +1,16 @@
 cdebconf (0.72) UNRELEASED; urgency=low
 
   * Colin Watson
-    - gtk frontend work:
+    - gtk frontend work (not built for sarge, so no risk):
       + Allocate choices, choices_translated, and defvals dynamically. Fixes
         several crash bugs.
       + Fix a type mismatch that generated a compiler warning.
       + Disable help popup on multiselects, since it made it impossible to
         actually select anything.
       + Implement the text type, just as an alias of note for now.
+      + Drop the old back/continue buttons entirely, as they only appear
+        sometimes and having both them and the druid-style buttons is very
+        confusing. Fix sensitivity of druid-style buttons.
 
  -- Colin Watson <cjwatson@debian.org>  Mon,  4 Oct 2004 15:27:40 +0100
 
